--- a/css/proyecto.css
+++ b/css/proyecto.css
@@ -1,25 +1,31 @@
 /* Aquí están ubicados los diseños generales de la página */
 *{
     padding: 0;
-    margin: 0;
+    margin: 0; 
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 
-}
+} 
 
 /* Fuentes Utilizadas */
 
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Montserrat:wght@400;700&display=swap');
 
 /* A partir de acá comienzan las modificaciones del header */
-
+/*
+*/
 .cabeceraIndex {
     background-image: url(../assets/img/brick-wall1280.jpg);
-    height: 50vh;
+    background-size: 100% 250%;
     background-repeat: no-repeat;
-    background-size: 100% 200%;
+    background-position: center;
+
 }
 
+.claseContenedor{
+    margin: 0 !important;
+}
+/*
 .barraNav{
     background-color: black;
     text-align: center;
@@ -33,42 +39,39 @@
     display: inline-block;
 }
 
-
+*/
 .botonesNav{
     color: white;
     text-decoration: none;
-    margin-left: 3rem;
-    margin-right: 3rem;
+    margin-left: 3em;
+    margin-right: 3em;
+    font-size: 1.5em;
 }
+.botonesNav:hover{
+    color: orange;
+}
+/*
 
+*/
 .logoPrincipal{
-    margin-top: 4rem;
-    margin-bottom: 4rem;
-    margin-left: 47.5%;
+    max-width: 170px;
+    margin-top: 3vh;
 }
 
-
-.tituloSubtitulo{
-    display: inline-block;
-    margin-top: 0;
-    margin-left: 38%;
-}
 
 .tituloIndex {
     color: white;
-    text-align: center;
     text-shadow: 1px 1px 2px black;
     font-size: 3rem;
-    width: 500px;
-    margin-right: 0%;
+}
+/*
+/* Utilicé margin-left: -150px porque no encontré otra manera de posicionar el carrito y cuando lo modificaba de otra manera se deformaba toda la página
+*/
+.carritoEnlace{
+    width: 150px;
+    background-color: none;
 }
 
-/* Utilicé margin-left: -150px porque no encontré otra manera de posicionar el carrito y cuando lo modificaba de otra manera se deformaba toda la página*/
-.carritoEnlace{
-    margin-right: 0;
-    width: 150px;
-    margin-left: -150px;
-}
 
 .carrito{
     width: 6rem;
@@ -80,38 +83,57 @@
 
 .subTitulo{
     color: white;
-    text-align: center;
     margin-top: 4rem;
     text-shadow: 1px 1px 2px black;
     font-size: 2rem;
+    padding-bottom: 1em;
 }
-/* A partir de acá Terminan las modificaciones del header y empiezan las del main*/
-
+/* A partir de acá Terminan las modificaciones del header y empiezan las del main
+*/
 .colorFondo {
     background-color: orange;
     text-align: center;
-    height: 90vh;
+    overflow: hidden;
+    padding-bottom: 3em;
 }
 
 .demostracion{
     display: inline-block;
     width: 50% auto;
-    padding: 2rem;
+    padding: 2em;
     text-align: center;
 }
 
+
+.imagenesCarrucelTamaño{
+    max-height: 900px;
+    max-width: 90%;
+    margin: 5%;
+}
 .flexItems{
     display: inline-block;
-    width: 300px;
+    max-width: 100%;
     margin: 3rem;
-    text-align: left;
+    text-align: center;
     border: 20px black;
+    max-height: 100%;
+}
+.textoCarrusel{
+    font-size: 1.5em;
+    padding: 10px;
+    color: white;
+    padding-bottom: 8em;
+    z-index: 10;
+    text-shadow: 1px 1px 2px black;
 }
 
+
 .textoDemostracion{
-    background-color: white;
-    font-size: 1.5rem;
-    border: 2px solid black;
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 0;
+    padding-top: 2em;
+    text-decoration: underline;
 }
 
 .formularioRegistro{
@@ -140,13 +162,24 @@
 }
 
 
-/* A partir de acá Terminan las modificaciones del main y empiezan las del footer*/
+/* A partir de acá Terminan las modificaciones del main y empiezan las del footer
+*/
+.iconosPiePagina{
+    max-width: 150px;
+    margin-top: 3vh;
+    background-color: orange;
+    padding: 1em;
+    border-radius: 75%;
+    margin-left: 5em;
+    margin-right: 5em;
+    
+}
 
 .pieIndex{
     background-color: black;
     text-align: left;
 }
-
+/*
 .pieDePagina{
     color: white;
     display: inline-block;
@@ -159,25 +192,26 @@
     margin-right: 8rem;
     margin-left: 4rem;
 }
-
+*/
 .textoPie{
-    margin-right: 3rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-align: center;
+    color: white;
 }
-
+/*
 .mapaPie{
     margin-left: 4rem;
 }
-
+*/
 .Copyright{
     color: white;
     text-align: center;
     padding: 1rem;
+    margin-bottom: 0;
 }
 
 
-/* A partir de acá Terminan las modificaciones del footer y comienzan las dedicadas específicamente a modificar la página del carrito*/
+/* A partir de acá Terminan las modificaciones del footer y comienzan las dedicadas específicamente a modificar la página del carrito
 
 .objetoPrecio{
     display: inline-block;
@@ -200,25 +234,53 @@
     margin-top: 6rem;
     text-shadow: 1px 1px 2px black;
 }
-
+*/
 .imgBoton{
     margin-left: 5rem;
     margin-right: 5rem;
+    max-width: 22em;
+    max-height: 25em;
     display: inline-block;
+}
+.botonesLlevaroNo{
+    max-width: 22em;
+    max-height: 25em;
+    padding: 1em;
+}
+.imagenBotonesCarrito{
+    max-width: 16em;
+    max-height: auto;
 }
 
 .opcionesComida{
     color: black;
-    font-size: 2rem;
+    font-size: 2em;
     background-color: transparent;
 }
-
-/* odificacion del Main en las páginas (Carta Restaurante, Carta Cafetería y Carta Tragos)*/
-
-.botonesCarrito{
-    margin: 0.5rem;
+.queOpcionComida{
+    font-size: 3em;
+    background-color: transparent;
+    color: white;
+    text-decoration: underline;
+    margin: 1em;
 }
 
+/* odificacion del Main en las páginas (Carta Restaurante, Carta Cafetería y Carta Tragos)
+*/
+.botonesCarrito{
+    margin: 2em;
+    border: solid black 0.2em;
+    
+}
 
+.tamañoImagen{
+    max-width: 100%;
+    max-height: 35vh;
+    border: solid black 0.2em;
+    
+}
 
-
+.imgGuiño{
+    max-width: 20em;
+    height: auto;
+}
